fix: banner button mobile style

--- a/@antv/gatsby-theme-antv/site/components/Banner.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Banner.module.less
@@ -323,7 +323,7 @@
   .wrapper {
     .text {
       .buttons {
-        margin-top: 70%;
+        margin-top: 77%;
         .videoButton {
           display: none;
         }
@@ -348,6 +348,11 @@
 
 @media (max-width: 480px) {
   .wrapper {
+    .text {
+      .buttons {
+        margin-top: 95%;
+      }
+    }
     .teaser {
       top: 15%;
     }
